unbe1iev-dev/creator/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unbe1iev-creator
  namespace: unbe1iev-dev
spec:
  serviceName: "creator"
  replicas: 1
  selector:
    matchLabels:
      app: creator
  template:
    metadata:
      labels:
        app: creator
    spec:
      containers:
        - name: creator
          image: harbor.unbe1iev.com/unbe1iev-dev/creator:1.0.0
          ports:
            - containerPort: 8001
      imagePullSecrets:
        - name: unbe1iev-docker-login
