unbe1iev-dev/creator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creator
  namespace: unbe1iev-dev
spec:
  type: LoadBalancer
  selector:
    app: creator
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
